# feb26_dpm_abritel

./: .dockerignore  .env.example  .gitattributes  .gitignore  1_benchmark.py  1_pipeline.py  2_analyse.ipynb  2_analyse_complete.html  2_analyse_complete.ipynb  2_analyse_complete.py  3_analyse_problemes.py  Abritel Projet.pbix  CODEOWNERS  Fiche Projet - Abritel.md  LICENSE  MASTER_CHALLENGE_BACKLOG.md  README.md  backlog.md  decisions-techniques.md  docker-compose.yml  justfile  livrables-fiche-projet.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  contract-tests.yml  scrape.yml
airflow/: Dockerfile  requirements.txt
airflow/dags/: voc_pipeline.py
data/: analyse_problemes.md  avis_enrichis.csv  crosstab_categorie_gravite.csv  crosstab_categorie_source.csv  priorisation_categories.csv  releases.csv  synthese_categories.csv  synthese_categories_reporting.csv  synthese_secondaire.csv
data/benchmark/: benchmark_complet.csv
data/benchmark/abritel/: avis_enrichis.csv  pipeline_meta.json
data/benchmark/airbnb/: avis_enrichis.csv  pipeline_meta.json
data/benchmark/booking/: avis_enrichis.csv  pipeline_meta.json
db-init/: 01-create-voc-db.sql  02-create-superset-db.sql
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/: sources.yml
dbt/models/marts/consumption/: dm_direction_synthese.sql  dm_finance_litiges.sql  dm_marketing_voc.sql  dm_sav_tickets.sql
dbt/models/marts/core/: _core.yml  dim_brand.sql  dim_category.sql  dim_date.sql  dim_persona.sql  dim_severity.sql  dim_source.sql  dim_ticket_status.sql  fact_classifications.sql  fact_reviews.sql  fact_tickets.sql
dbt/models/staging/: stg_reviews.sql
dbt/seeds/: seed_brands.csv  seed_categories.csv  seed_personas.csv  seed_severities.csv  seed_sources.csv  seed_ticket_statuses.csv
grafana/: README.md
grafana/dashboards/: 01-executive-overview.json  02-brand-comparison.json  03-operations-sav.json
grafana/provisioning/dashboards/: voc.yml
grafana/provisioning/datasources/: voc.yml
scripts/: ci_docker.sh  smoke_ollama_docker.py
src/abritel/: __init__.py  categorisation.py  ollama_categorisation.py  pipeline.py  scraping.py
src/voc/: __init__.py  config.py
src/voc/activation/: __init__.py  alerting.py  notion.py  slack.py  ticketing.py
src/voc/ingestion/: __init__.py  _http.py  app_store.py  brands.py  google_play.py  runner.py  trustpilot.py
src/voc/refinement/: __init__.py  categorize.py  llm_classify.py  quality_filter.py
src/voc/warehouse/: __init__.py  loader.py
superset/: Dockerfile  README.md  bootstrap.sh  superset_config.py
superset/assets/: provision.py
tests/: conftest.py  test_categorisation.py  test_categorize.py  test_contracts.py  test_llm_classify.py  test_normalisation.py  test_notion.py  test_ollama_categorisation.py  test_parsing.py  test_pipeline.py  test_quality_filter.py  test_scraping.py  test_slack.py
